--- a/CSS/Styless.css
+++ b/CSS/Styless.css
@@ -29,7 +29,7 @@ input:hover {
 
 .card-bts :hover {
   box-shadow: 0px 0px 0px grey;
-  -webkit-transition: box-shadow 0.6s ease-out;
+  //webkit-transition: box-shadow 0.6s ease-out;
   box-shadow: 0.8px 0.9px 3px grey;
 }
 
