--- a/CSS/Styless.css
+++ b/CSS/Styless.css
@@ -1,3 +1,10 @@
+body {
+  background-image: url('../img/photo-1577996947118-d820138a697e.avif');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+
 .contacto {
   color: rgb(252, 252, 252);
   margin: 0 auto;
@@ -9,6 +16,7 @@
     width: 450px;
   }
 }
+
 .form-control {
   background-color: black;
   color: white;
@@ -22,6 +30,7 @@ input:hover {
   width: 100%;
   box-sizing: border-box;
 }
+
 .enviar {
   background-color: black;
   width: 100%;
@@ -29,7 +38,7 @@ input:hover {
 
 .card-bts :hover {
   box-shadow: 0px 0px 0px grey;
-  //webkit-transition: box-shadow 0.6s ease-out;
+  webkit-transition: box-shadow 0.6s ease-out;
   box-shadow: 0.8px 0.9px 3px grey;
 }
 
