Arregle la seccion about us

--- a/CSS/Styless.css
+++ b/CSS/Styless.css
@@ -54,6 +54,10 @@ input:hover {
   color: white;
 }
 
+.about-text{
+  margin-left: 0.5vw;
+}
+
 /* styles for productos header  */
 .productos-header {
   color: white;
